# crsf_parser

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
crsf_parser/: __init__.py  frames.py  handling.py  payloads.py
example/: build_frame.py  parse_serial.py
tests/: test_csrf_parser.py
