[tool.poetry]
name = "crsf_parser"
version = "0.0.0"
description = "A package to parse and create CRSF (Crossfire) frames, developed primarily to interoperate with ExpressLRS"
authors = ["Alessio Morale <alessiomorale@gmail.com>"]
license = "MIT"
homepage = "https://github.com/AlessioMorale/crsf_parser"
repository = "https://github.com/AlessioMorale/crsf_parser"

readme = "README.rst"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
construct= "^2.10"
construct-typing = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyserial = "^3.5"
black = "^21.9b0"
mypy = "^0.910"
pylint = "^2.11.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
